crates/llvmkit-ir/tests/compile_fail/add_incoming_after_finish.stderr
error[E0599]: no method named `add_incoming` found for struct `PhiInst<'_, i32, llvmkit_ir::Closed, Brand<'_>>` in the current scope
  --> tests/compile_fail/add_incoming_after_finish.rs:38:21
   |
38 |         let _ = phi.add_incoming(3_i32, entry_label);
   |                     ^^^^^^^^^^^^
   |
note: there's an earlier shadowed binding `phi` of type `PhiInst<'_, i32, llvmkit_ir::Open, Brand<'_>>` that has method `add_incoming` available
  --> tests/compile_fail/add_incoming_after_finish.rs:30:13
   |
30 |         let phi = b.build_int_phi::<i32, _>("p").unwrap();
   |             ^^^ `phi` of type `PhiInst<'_, i32, llvmkit_ir::Open, Brand<'_>>` that has method `add_incoming` defined earlier here
31 |         let phi = phi
   |             --- earlier `phi` shadowed here with type `PhiInst<'_, i32, llvmkit_ir::Closed, Brand<'_>>`
help: there is a method `incoming` with a similar name, but with different arguments
  --> src/instructions.rs
   |
   | /     pub fn incoming(
   | |         &self,
   | |         index: u32,
   | |     ) -> IrResult<(Value<'ctx, B>, BasicBlockLabel<'ctx, Dyn, B>)> {
   | |__________________________________________________________________^
